--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.116.1"
 psycopg2 = "^2.9.10"
+requests = "^2.32.5"
+psycopg2-binary = "^2.9.10"
+redis = "^6.4.0"
+pydantic = "^2.11.9"
+beautifulsoup4 = "^4.13.5"
 
 
 [build-system]
