--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ Thumbs.db
 # Misc
 # ------------------------
 *.pytest_cache/
+
+# ------------------------
+# data files
+# ------------------------
+
+.json
