--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ fastapi = "^0.116.1"
 psycopg2 = "^2.9.10"
 requests = "^2.32.5"
 psycopg2-binary = "^2.9.10"
-redis = "^6.4.0"
+redis = {extras = ["async"], version = "^6.4.0"}
 pydantic = {extras = ["email"], version = "^2.11.9"}
 beautifulsoup4 = "^4.13.5"
 sqlalchemy = "^2.0.43"
