--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 pymysql = "^1.1.2"
 uvicorn = "^0.35.0"
 bcrypt = "^4.3.0"
+matplotlib = "^3.10.7"
 
 
 [build-system]
