--- a/render.yaml
+++ b/render.yaml
@@ -36,10 +36,9 @@ services:
 
   - type: pserv
     name: mariadb
-    env: linux
+    env: docker
     plan: free
-    runtime: docker
-    image: mariadb:11
+    dockerfilePath: ./mariadb.Dockerfile
     envVars:
       - key: MARIADB_ROOT_PASSWORD
         value: HardPass@1234
