--- a/render.yaml
+++ b/render.yaml
@@ -8,10 +8,7 @@ services:
     autoDeploy: true
     envVars:
       - key: REDIS_HOST
-        fromService:
-          name: redis
-          type: redis
-          envVarKey: REDIS_HOST
+        value: redis
       - key: REDIS_PORT
         value: "6379"
       - key: DB_TYPE
@@ -53,5 +50,5 @@ services:
     name: redis
     plan: free
     ipAllowList:
-      - source: fastapi-app
-        description: Permitir acesso da 
+      - source: 0.0.0.0/0
+        description: Acesso liberado para desenvolvimento
